--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
               "tsConfig": "projects/core-ui/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/core-ui/tsconfig.lib.json"
+              "tsConfig": "projects/core-ui/tsconfig.lib.json"             
             }
           },
           "defaultConfiguration": "production"
@@ -28,6 +28,39 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "projects/core-ui/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    },
+    "ngiw-core-utils": {
+      "projectType": "library",
+      "root": "projects/ngiw-core-utils",
+      "sourceRoot": "projects/ngiw-core-utils/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngiw-core-utils/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngiw-core-utils/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngiw-core-utils/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/ngiw-core-utils/tsconfig.spec.json",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
