--- a/angular.json
+++ b/angular.json
@@ -3,23 +3,23 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "core-ui": {
+    "ngiw-core-ui": {
       "projectType": "library",
-      "root": "projects/core-ui",
-      "sourceRoot": "projects/core-ui/src",
+      "root": "projects/ngiw-core-ui",
+      "sourceRoot": "projects/ngiw-core-ui/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/core-ui/ng-package.json"
+            "project": "projects/ngiw-core-ui/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/core-ui/tsconfig.lib.prod.json"
+              "tsConfig": "projects/ngiw-core-ui/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/core-ui/tsconfig.lib.json"             
+              "tsConfig": "projects/ngiw-core-ui/tsconfig.lib.json"             
             }
           },
           "defaultConfiguration": "production"
@@ -27,7 +27,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "projects/core-ui/tsconfig.spec.json",
+            "tsConfig": "projects/ngiw-ngiw-core-ui/tsconfig.spec.json",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
