--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build ngiw-core-utils & ng build core-ui",
-    "watch": "ng build ngiw-core-utils --watch --configuration development  ",
+    "build": "ng build ngiw-core-utils && ng build ngiw-core-ui",
+    "watch-core-utils": "ng build ngiw-core-utils --watch --configuration development",
+    "watch-core-ui": "ng build ngiw-core-ui --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
@@ -20,6 +21,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "ng-zorro-antd": "16.1.0",
+    "ngiw-core-utils": "file:./dist/ngiw-core-utils",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
