--- a/projects/ngiw-core-ui/package.json
+++ b/projects/ngiw-core-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core-ui",
+  "name": "ngiw-core-ui",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.1.0",
