--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "marked": "^11.0.0",
     "ng-zorro-antd": "16.1.0",
     "ngiw-core-utils": "file:./dist/ngiw-core-utils",
     "rxjs": "~7.8.0",
