--- a/projects/ngiw-core-ui/tsconfig.lib.json
+++ b/projects/ngiw-core-ui/tsconfig.lib.json
@@ -6,7 +6,10 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "ngiw-core-utils": [
+      "dist/ngiw-core-utils"
+    ]
   },
   "exclude": [
     "**/*.spec.ts"
