--- a/projects/ngiw-core-ui/package.json
+++ b/projects/ngiw-core-ui/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "ngiw-core-utils": "../../dist/ngiw-core-utils"
+    "@angular/core": "^16.1.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
