--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,11 @@
               {
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
-                "output": "projects/showcase-app/src/assets/"
+                "output": "./projects/showcase-app/src/assets/"
               }
             ],
             "styles": [
-              "projects/showcase-app/src/styles.scss",
+              "./projects/showcase-app/src/styles.scss",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
@@ -101,7 +101,17 @@
             "styles": [
               "projects/showcase-app/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "projects/showcase-app/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/showcase-app/**/*.ts",
+              "projects/showcase-app/**/*.html"
+            ]
           }
         }
       }
@@ -134,7 +144,8 @@
             "polyfills": [
               "zone.js",
               "zone.js/testing"
-            ]
+            ],
+            "karmaConfig": "projects/ngiw-common/karma.conf.js"
           }
         },
         "storybook": {
@@ -172,6 +183,15 @@
             "styles": [
               "projects/showcase-app/src/styles.scss",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+            ]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/ngiw-common/**/*.ts",
+              "projects/ngiw-common/**/*.html"
             ]
           }
         }
