--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "scripts": {
     "ng": "ng",
     "dev": "concurrently \"npm:watch-lib\" \"npm:watch-showcase-app\" \"npm:storybook\"",
-    "prod": "ng build ngiw-common && ng build showcase-app",
+    "prod": "npm run lint-lib &&  npm run build-lib && npm run lint-showcase-app && npm run test-showcase-app && npm run build-showcase-app",
     "watch-lib": "ng build ngiw-common --watch --configuration development",
     "watch-showcase-app": "ng serve --configuration development",
-    "storybook": "ng run ngiw-common:storybook",
-    "test": "ng test"
+    "build-lib": "ng build ngiw-common --configuration production",
+    "build-showcase-app": "ng build showcase-app --configuration production",
+    "lint-lib": "ng lint ngiw-common",
+    "lint-showcase-app": "ng lint showcase-app",
+    "test-lib": "ng test ngiw-common --watch=false",
+    "test-showcase-app": "ng test showcase-app --watch=false",
+    "storybook": "storybook dev",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +36,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.6",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@chromatic-com/storybook": "^1.4.0",
@@ -42,6 +53,9 @@
     "@storybook/blocks": "^8.1.3",
     "@storybook/test": "^8.1.3",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "^8.51.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
