--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ng-zorro-antd": "16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.6",
@@ -64,6 +64,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^16.0.0",
     "storybook": "^8.1.3",
-    "typescript": "~5.1.3"
+    "typescript": "5.2"
   }
 }
